# BCFW-Bundle

./: .travis.yml  CMakeLists.txt  README.md  SVM.cpp  SVM.h
include/: FW-MAP.h  SVMutils.h  block.h  timer.h
src/: CMakeLists.txt  FW-MAP.cpp  Solve.cpp
test/: 2x2gm.cpp  CMakeLists.txt
